--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -152,6 +152,15 @@ ul li a:hover {
 }
 		.product-section{
 		height:70%;}
+	.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 
 
 
