--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -80,7 +80,15 @@
 		.list-box {
          margin-top: 20px; /* Adjust the value to increase or decrease the space */
 }
-
+	.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 
 
 	</style>
