--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -53,6 +53,15 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
+			.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 
 
 	</style>
