--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -277,6 +277,15 @@ margin-right:55%;
 			margin-left: -70%;
 
 			}
+				.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 
 
 	</style>
