--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -43,10 +43,7 @@
             background: linear-gradient(96deg, rgba(21, 22, 51, 1) 0%, rgba(226, 42, 162, 1) 86%);
         }
 
-        .top-header-area {
-            padding: 15px 0;
-            width: 100%;
-        }
+      
 
         #video-container, #captured-image {
             border-radius: 4%;
@@ -154,26 +151,50 @@
   padding: 20px;
 }
 
+						.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
+
 
     </style>
 <body>
 
     <!-- Header -->
-    <div class="top-header-area" id="sticker">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-sm-12 text-center">
-                    <div class="main-menu-wrap">
-                        <div class="site-logo">
-                            <a href="{% url 'index' %}">
-                                <img src="{% static 'img/Games/GameGeek.png' %}" alt="logo" width="300px" height="120px">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+ 	<div class="top-header-area" id="sticker">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-sm-12 text-center">
+					<div class="main-menu-wrap">
+						<!-- logo -->
+						<div class="site-logo">
+							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo" width="300px" height="120px">
+							</a>
+						</div>
+
+						<!-- menu start -->
+						<nav class="main-menu">
+							<ul>
+
+								<li>
+									<div class="header-icons">
+
+
+									</div>
+								</li>
+							</ul>
+						</nav>
+						<!-- menu end -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
     <!-- End Header -->
 
     <section id="main-content">
