--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -67,6 +67,15 @@
 }
 		.container {
 		height:100%;}
+	.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 
 
 	</style>
