--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -38,7 +38,7 @@
   width: 200px;
     height: 100px;
 	position: relative;
-	left: -25px;
+	left: -40px;
 }
 body img{
   max-width: 600px;
@@ -343,7 +343,7 @@ console.log("Document is ready.");
 					<div class="abt-text">
 						<p class="top-sub">Since Year 2023</p>
 						<h2>We are <span class="pink-text">Game Geek</span></h2>
-						<p>Game Geek is a platform that offers multiple in-app video games for different age groups. In Game Geek we prioritize our user's safety. Therefore, we aim to help users find video games that suit their age group. </p>
+						<p style="text-align:justify;">Game Geek is a platform that offers multiple in-app video games for different age groups. In Game Geek we prioritize our user's safety. Therefore, we aim to help users find video games that suit their age group. </p>
 
 						<!--<a href="{% url 'about' %}" class="boxed-btn mt-4">know more</a>-->
 					</div>
