--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -58,7 +58,7 @@
 
 background: rgb(21,22,51);
 background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
-  position: relative;
+
   z-index: 1;
 		}
 
@@ -172,15 +172,15 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
          right: -6px;
 		 font-size: 18px;
 		}
-		.site-logo img{
-	    width: 240px;
-        height: 140px;
-		position: relative;
-		left: 100px;
-	}
-	body img{
-		max-width: 600px;
-	}
+				.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+body img{
+  max-width: 600px;
+}
 
 .popup {
   display: none;
@@ -251,6 +251,7 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
   position: relative;
   left: -370px;
   top: 200px;
+
 }
 
 
@@ -270,13 +271,33 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
 
 	<!-- header -->
 	<div class="top-header-area" id="sticker">
+		<div class="container">
+			<div class="row">
 				<div class="col-lg-12 col-sm-12 text-center">
+					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo" width="300px" height="120px">
 							</a>
 						</div>
+
+						<!-- menu start -->
+						<nav class="main-menu">
+							<ul>
+
+								<li>
+									<div class="header-icons">
+
+
+									</div>
+								</li>
+							</ul>
+						</nav>
+						<!-- menu end -->
+					</div>
+				</div>
 			</div>
+		</div>
 	</div>
 	<!-- end header -->
 	<div class="hero-area hero-bg" style="background-size: 120%;">
