--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -256,7 +256,7 @@ body img{
 				</div>
 				<ul class="Realbreadcrumb">
 
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >All Games</a></li>
 					<li class="breadcrumb-item current"><a href="{% url 'Fav' %}" >Favourite Games</a></li>
 
 				  </ul>
