--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -169,7 +169,7 @@ body img{
 				</div>
 					<ul class="Realbreadcrumb">
 
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >All Games</a></li>
 					<li class="breadcrumb-item current"><a href="{% url 'History' %}" >Downloaded Games</a></li>
 
 				  </ul>
