--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -314,7 +314,7 @@ body img{
 		<div class="container">
 			<div class="left">
 				<h3 class="animate-charcter">Welcome back, gamer 🎮!</h3>
-				<p style="color: #fff; letter-spacing: 1px; padding: 10px;  margin: 0; max-width: 550px; margin-left: 130px; font-size: 20px;" ALIGN=LEFT><b> More adventures awaits behind these login gates. Ready to get started? 🚀</b></p>
+				<p style="color: #fff; letter-spacing: 1px; padding: 10px;  margin: 0; max-width: 550px; margin-left: 130px; font-size: 20px; text-align:center;" ALIGN=LEFT><b> More adventures awaits behind these login gates. Ready to get started? 🚀</b></p>
 			</div>
 			<div class="right">
 				<div class="containeTitle" style="margin-left: 200px;">
