--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -260,7 +260,7 @@ body img{
 				<h3 class="animate-charcter">Let the fun begin with Game Geek!</h3>
 				<br>
 				<h4 class="note" style="color: #ff069a; letter-spacing: 1px; font-size: 22px;">Important Note for Our Young Gamers🎮</h4>
-				<p style="color: #fff; letter-spacing: 1px; padding: 10px;  margin: 0; max-width: 550px; margin-left: 130px; font-size: 16px; text-align:justify;" ALIGN=LEFT><b>Hey there! If you're 16 or younger, we just want to make sure you have an amazing time on Game Geek with a bit of extra support.  Kindly ensure that you have permission from an adult before registering. Happy gaming! 🚀</b></p>
+				<p style="color: #fff; letter-spacing: 1px; padding: 10px;  margin: 0; max-width: 550px; margin-left: 130px; font-size: 16px; text-align:center;" ALIGN=LEFT><b>Hey there! If you're 16 or younger, we just want to make sure you have an amazing time on Game Geek with a bit of extra support.  Kindly ensure that you have permission from an adult before registering. Happy gaming! 🚀</b></p>
 				<br>
 
 			</div>
