--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -38,7 +38,7 @@
   width: 200px;
     height: 100px;
 	position: relative;
-	left: -40px;
+	left: -28px;
 }
 body img{
   max-width: 600px;
@@ -61,44 +61,60 @@ body img{
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
-		div img{
-		margin-left:10%}
+
+
+
 		.hero-btns .boxed-btn{
 		width:30%;
-		margin:auto 14% auto auto;}
+		}
 		.subtitle h1{
 		margin:auto;}
 
 
 .animate-charcter {
-  text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #231557 0%,
-	#ff069a 29%,
-    #06f7ff 67%,
-    #fff 100%
-  );
-  background-size: auto auto;
-  background-clip: border-box;
-  background-size: 200% auto;
-  color: #fff;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: textclip 2s linear infinite;
-  display: inline-block;
-  font-size: 80px;
-  letter-spacing: 20px;
-  line-height: 1.5;
+    text-transform: uppercase;
+    background-image: linear-gradient(
+        -225deg,
+        #231557 0%,
+        #ff069a 29%,
+        #06f7ff 67%,
+        #fff 100%
+    );
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 5vw; /* Adjust the value as needed */
+    letter-spacing: 2vw; /* Adjust the value as needed */
+    line-height: 1.5;
 }
-
 @keyframes textclip {
   to {
     background-position: 200% center;
   }
 }
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .site-logo img {
+        width: 80%;
+        max-width: 100%;
+        margin: 10px auto 0;
 
+    }
+
+    .hero-btns .boxed-btn {
+        width: 80%;
+        max-width: 100%;
+        margin: 20px auto 0;
+    }
+
+    /* Additional adjustments for the login button or other elements if needed */
+}
 	</style>
 
 </head>
@@ -120,7 +136,7 @@ body img{
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo" width="300px" height="120px">
+							<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 							</a>
 						</div>
 
